@@ -1,6 +1,6 @@
 /* ldctor.h - linker constructor support
-   Copyright 1991, 92, 93, 94, 95, 1998 Free Software Foundation, Inc.
-   
+   Copyright 1991, 92, 93, 94, 95, 98, 2000 Free Software Foundation, Inc.
+
 This file is part of GLD, the Gnu Linker.
 
 GLD is free software; you can redistribute it and/or modify
