@@ -25,7 +25,7 @@ Software Foundation, 59 Temple Place - Suite 330, Boston, MA
    Contributed by Steve Chamberlain <sac@cygnus.com>.  */
 
 #include "bfd.h"
-#include "sysdep.h" 
+#include "sysdep.h"
 #include "ld.h"
 #include "ldexp.h"
 #include "ldlang.h"
@@ -67,8 +67,8 @@ lookup (name, list)
      struct section_name_struct **list;
 {
   struct section_name_struct **ptr = list;
-  
-  while (*ptr) 
+
+  while (*ptr)
     {
       if (strcmp (name, (*ptr)->name) == 0)
 	/* If this is a match, delete it, we only keep the last instance
@@ -92,7 +92,7 @@ mri_add_to_list (list, name, vma, zalias, align, subalign)
      etree_type *subalign;
 {
   struct section_name_struct **ptr = lookup (name,list);
-  
+
   (*ptr)->name = name;
   (*ptr)->vma = vma;
   (*ptr)->next = (struct section_name_struct *) NULL;
@@ -139,7 +139,7 @@ mri_draw_tree ()
   /* Create the regions.  */
   {
     lang_memory_region_type *r;
-    
+
     r = lang_memory_region_lookup("long");
     r->current = r->origin = exp_get_vma (base, (bfd_vma)0, "origin",
 					  lang_first_phase_enum);
@@ -147,7 +147,7 @@ mri_draw_tree ()
 					     "length", lang_first_phase_enum);
   }
 #endif
-  
+
   /* Now build the statements for the ldlang machine.  */
 
   /* Attatch the addresses of any which have addresses,
@@ -156,28 +156,28 @@ mri_draw_tree ()
     {
       struct section_name_struct *alist;
       struct section_name_struct *olist;
-      
+
       if (order == (struct section_name_struct *)NULL)
 	order = address;
 
       for (alist = address;
 	   alist != (struct section_name_struct*)NULL;
-	   alist = alist->next) 
+	   alist = alist->next)
 	{
 	  int done = 0;
-	  
+
 	  for (olist = order;
 	       done == 0 &&
 		 olist != (struct section_name_struct *)NULL;
-	       olist = olist->next) 
+	       olist = olist->next)
 	    {
-	      if (strcmp (alist->name, olist->name) == 0) 
+	      if (strcmp (alist->name, olist->name) == 0)
 		{
 		  olist->vma = alist->vma;
 		  done = 1;
 		}
 	    }
-	  
+
 	  if (!done)
 	    {
 	      /* Add this onto end of order list.  */
@@ -188,41 +188,41 @@ mri_draw_tree ()
 
   /* If we're only supposed to load a subset of them in, then prune
      the list.  */
-  if (only_load != (struct section_name_struct *)NULL) 
+  if (only_load != (struct section_name_struct *)NULL)
     {
       struct section_name_struct *ptr1;
       struct section_name_struct *ptr2;
-      
+
       if (order == (struct section_name_struct*)NULL)
 	order = only_load;
-    
+
       /* See if this name is in the list, if it is then we can load it.  */
-      for (ptr1 = only_load; ptr1; ptr1 = ptr1->next) 
-	for (ptr2 = order; ptr2; ptr2 = ptr2->next) 
+      for (ptr1 = only_load; ptr1; ptr1 = ptr1->next)
+	for (ptr2 = order; ptr2; ptr2 = ptr2->next)
 	  if (strcmp (ptr2->name, ptr1->name) == 0)
 	    ptr2->ok_to_load = 1;
     }
-  else 
+  else
     {
       /* No only load list, so everything is ok to load.  */
       struct section_name_struct *ptr;
-      
+
       for (ptr = order; ptr; ptr=ptr->next)
 	ptr->ok_to_load = 1;
   }
 
   /* Create the order of sections to load.  */
-  if (order != (struct section_name_struct *)NULL) 
+  if (order != (struct section_name_struct *)NULL)
     {
       /* Been told to output the sections in a certain order.  */
       struct section_name_struct *p = order;
-      
-      while (p) 
+
+      while (p)
 	{
 	  struct section_name_struct *aptr;
 	  etree_type *align = 0;
 	  etree_type *subalign = 0;
-	  
+
 	  /* See if an alignment has been specified.  */
 	  for (aptr = alignment; aptr; aptr= aptr->next)
 	    if (strcmp (aptr->name, p->name) == 0)
@@ -241,14 +241,14 @@ mri_draw_tree ()
 					       (etree_type *) NULL);
 	  base = 0;
 	  lang_add_wild (p->name, false, (char *)NULL, false, false, NULL);
-	  
+
 	  /* If there is an alias for this section, add it too.  */
 	  for (aptr = alias; aptr; aptr = aptr->next)
 	    if (strcmp (aptr->alias, p->name) == 0)
 	      lang_add_wild (aptr->name, false, (char *)NULL, false, false, NULL);
 
 	  lang_leave_output_section_statement
-	    (0, "*default*", (struct lang_output_section_phdr_list *) NULL, 
+	    (0, "*default*", (struct lang_output_section_phdr_list *) NULL,
 	     "*default*");
 
 	  p = p->next;
@@ -265,7 +265,7 @@ mri_load (name)
   base = 0;
   lang_add_input_file (name,
 		       lang_input_file_is_file_enum, (char *)NULL);
-#if 0  
+#if 0
   lang_leave_output_section_statement (0,"*default*");
 #endif
 }
@@ -277,7 +277,7 @@ mri_order (name)
   mri_add_to_list (& order, name, 0, 0,0,0);
 }
 
-void 
+void
 mri_alias (want, is, isn)
      CONST char *want;
      CONST char *is;
@@ -286,20 +286,20 @@ mri_alias (want, is, isn)
   if (!is)
     {
       char buf[20];
-      
+
       /* Some sections are digits.  */
       sprintf (buf, "%d", isn);
-      
+
       is = xstrdup (buf);
-      
+
       if (is == NULL)
 	abort ();
     }
-  
+
   mri_add_to_list (& alias, is, 0, want,0,0);
 }
 
-void 
+void
 mri_name (name)
      CONST char *name;
 {
@@ -312,13 +312,13 @@ mri_format (name)
 {
   if (strcmp (name, "S") == 0)
     lang_add_output_format ("srec", (char *) NULL, (char *) NULL, 1);
-  
+
   else if (strcmp (name, "IEEE") == 0)
     lang_add_output_format ("ieee", (char *) NULL, (char *) NULL, 1);
-  
+
   else if (strcmp (name, "COFF") == 0)
     lang_add_output_format ("coff-m68k", (char *) NULL, (char *) NULL, 1);
-  
+
   else
     einfo (_("%P%F: unknown format type %s\n"), name);
 }
@@ -331,7 +331,7 @@ mri_public (name, exp)
   lang_add_assignment (exp_assop ('=', name, exp));
 }
 
-void 
+void
 mri_align (name, exp)
      CONST char *name;
      etree_type *exp;
@@ -339,7 +339,7 @@ mri_align (name, exp)
   mri_add_to_list (& alignment, name, 0, 0, exp, 0);
 }
 
-void 
+void
 mri_alignmod (name, exp)
      CONST char *name;
      etree_type *exp;
@@ -347,10 +347,9 @@ mri_alignmod (name, exp)
   mri_add_to_list (& subalignment, name, 0, 0, 0, exp);
 }
 
-void 
+void
 mri_truncate (exp)
      unsigned int exp;
 {
   symbol_truncate = exp;
 }
-
